# VulnRemake

./: .breakpoints  .env  .gitignore  .replit  imgfunctions.py  main.py  pyproject.toml  readme.md  replace.py
cogs/Fun/: av.py  chatbot.py  define.py  factorial.py  genav.py  getDiscord.py  getInfo.py  ping.py  poll.py
cogs/Hypixel/: pair.py  stats.py
cogs/Moderation/: addkey.py  api_check.py  errorhandler.py  exec.py  forcepair.py  kickoffline.py  messages.py  printnerds.py  purge.py  rankgive.py  reload.py  staffRole.py  warns.py
cogs/Pair/: pair.py
