[tool.poetry]
name = "repl_python3_VulnRemake"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
discord-pretty-help = "^1.3.2"
replit = "^3.2.4"
prsaw2 = "^0.42"
reportlab = "^3.6.1"
svglib = "^1.1.0"
colorama = "^0.4.4"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
